--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</div>
 		<div class="card-body">
 		  <p class="card-text">Load page with Russian lang</p>
-		  <a class="btn btn-xs btn-primary" href="depictions/?p=com.supermamon.newpackage">Russian lang</a>
+		  <a class="btn btn-xs btn-primary" href="index.html">Russian lang</a>
 		</div>
 	</div>
 
