--- a/Ruindex.html
+++ b/Ruindex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <title>Leonidtsk's repo</title>
   <meta charset="utf-8">
@@ -17,14 +17,14 @@
 <div class="container">
 	<div class="card">
 		<div class="card-body">
-			<p><span class="text-primary">Welcome to the <b>Leonidtsk's repo</span></b> site!</p>
-			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://leonidtsk.github.io/repo/">Add to Cydia</a>
+			<p><span class="text-primary">Добро пожаловать на сайт<b>Leonidtsk's repo</span></b></p>
+			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://leonidtsk.github.io/repo/">Добавить репо в Cydia</a>
 		</div>
 	</div>
 </div>
 <p></p>
 <div class="container">
-  <h3 id="wells" class="page-header">Featured Packages</h3>
+  <h3 id="wells" class="page-header">Дополнительно</h3>
 </div>
 
 <div class="container">
@@ -40,11 +40,11 @@
 	</div>
 	<div class="card">
 		<div class="card-header">
-			Load Russian language
+			Загрузить английский язык 
 		</div>
 		<div class="card-body">
-		  <p class="card-text">Load page with Russian lang</p>
-		  <a class="btn btn-xs btn-primary" href="index.html">Russian lang</a>
+		  <p class="card-text">Загрузить страницу с английским языком </p>
+		  <a class="btn btn-xs btn-primary" href="index.html">🇺🇲</a>
 		</div>
 	</div>
 
