--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			Load Russian language
 		</div>
 		<div class="card-body">
-		  <p class="card-text">Load page with Russian lang</p>
 		  <a class="btn btn-xs btn-primary" href="Ruindex.html">Russian lang</a>
+	          <a class="btn btn-xs btn-primary" href="index.html">Russian lang</a>
 		</div>
 	</div>
 
