--- a/Ruindex.html
+++ b/Ruindex.html
@@ -40,11 +40,12 @@
 	</div>
 	<div class="card">
 		<div class="card-header">
-			Загрузить английский язык 
+			Язык
 		</div>
 		<div class="card-body">
-		  <p class="card-text">Загрузить страницу с английским языком </p>
-		  <a class="btn btn-xs btn-primary" href="index.html">🇺🇲</a>
+		  <p class="card-text">Язык страницы</p>
+		  <a class="btn btn-xs btn-primary" href="Ruindex.html">🇷🇺</a>
+	          <a class="btn btn-xs btn-primary" href="index.html">🇺🇲</a>
 		</div>
 	</div>
 
