--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			Load Russian language
 		</div>
 		<div class="card-body">
+	          <p class="card-text">Язык страницы</p>
 		  <a class="btn btn-xs btn-primary" href="Ruindex.html">🇷🇺</a>
 	          <a class="btn btn-xs btn-primary" href="index.html">🇺🇲</a>
 		</div>
