--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 <div class="container">
 	<div class="card">
 		<div class="card-header">
-			Old Package
+			Contact
 		</div>
 		<div class="card-body">
-		  <p class="card-text">This is a sample package with minimal information.
-			It also simulates an old package that's incompatible only with iOS lower than 7.0.</p>
-			<a class="btn btn-xs btn-primary" href="depictions/?p=com.supermamon.oldpackage">More info</a>
+			<a class="btn btn-xs btn-primary" href="https://github.com/leonidtsk">Github</a>
+			<a class="btn btn-xs btn-primary" href="https://www.tiktok.com/@MS4wLjABAAAAWtGXBa8E6t3p08SZeH2gBRJaq0b3C5MOnWNhh7tWu-T-Xl50DK3b_DtqwRWfcIhg">tiktok</a>
+			<a class="btn btn-xs btn-primary" href="https://t.me/leonidtsk">telegram</a>
+			<a class="btn btn-xs btn-primary" href="https://4pda.to/forum/index.php?showuser=10823954">4pda</a>
 		</div>
 	</div>
 	<div class="card">
