--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 	</div>
 	<div class="card">
 		<div class="card-header">
-			Load Russian language
+			language
 		</div>
 		<div class="card-body">
-	          <p class="card-text">Язык страницы</p>
+	          <p class="card-text">Page language</p>
 		  <a class="btn btn-xs btn-primary" href="Ruindex.html">🇷🇺</a>
 	          <a class="btn btn-xs btn-primary" href="index.html">🇺🇲</a>
 		</div>
