--- a/Ruindex.html
+++ b/Ruindex.html
@@ -45,8 +45,8 @@
 		</div>
 		<div class="card-body">
 		  <p class="card-text">Язык страницы</p>
-		  <a class="btn btn-xs btn-primary" href="Ruindex.html">🇷🇺</a>
-	          <a class="btn btn-xs btn-primary" href="index.html">🇺🇲</a>
+		  <a class="btn btn-xs btn-primary" href="Ruindex.html">Русский</a>
+	          <a class="btn btn-xs btn-primary" href="index.html">English</a>
 		</div>
 	</div>
 
