--- a/Ruindex.html
+++ b/Ruindex.html
@@ -17,7 +17,7 @@
 <div class="container">
 	<div class="card">
 		<div class="card-body">
-			<p><span class="text-primary">Добро пожаловать на сайт <b>Репизитория Leonidtsk</span></b></p>
+			<p><span class="text-primary">Добро пожаловать на сайт <b>Репозитория Leonidtsk</span></b></p>
 			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://leonidtsk.github.io/repo/">Добавить репо в Cydia</a>
 		</div>
 	</div>
